Thu Aug 13 19:08:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SV_Semaphore_Simple.h:
          Fixed gcc warning

Thu Aug 13 09:10:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.pl:
          Shortened the time to wait, we do include now the time to start
          a process

Thu Aug 13 07:14:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-cegcc.h:
          Set the correct export defines

        * ace/DLL_Manager.cpp:
          Improved debug statement so that we can easily see that we have
          an empty string

        * ace/OS_NS_stdio.cpp:
          Added support for ACE_LACKS_FOPEN and simplified some methods

        * ace/OS_NS_stdio.inl:
          Const change

Thu Aug 13 03:23:33 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * ACE.mwc:

          Fixed a comment.

        * bin/MakeProjectCreator/config/crosscompile.mpb:
        * bin/MakeProjectCreator/config/global.features:
        * bin/MakeProjectCreator/config/wb26.features:

          Added the cross_compile feature that is disabled by default.  It
          is enabled within the wb26.features.  The 'crosscompile' base
          project "avoids" the cross_compile feature.  This fixes bug 3318.

Wed Aug 12 19:57:02 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Define ACE_HAS_GETIFADDRS only for glibc 2.3 and newer.

Wed Aug 12 19:55:03 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/config-freebsd.h:
          Fix for older FreeBSD versions.

Wed Aug 12 17:57:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc_warnings.mpb:
          Use prop:microsoft

Wed Aug 12 06:47:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/tests.mpc:
          Readded compiler test 08, but with dummy_label to show that
          this test is there but not compiled
