@@ -642,8 +642,8 @@ protected:
 
   /**
    * Dispatch all the input/output/except handlers that are enabled in
-   * the <dispatch_set>.  Updates <number_of_active_handles> and
-   * <number_of_handlers_dispatched> according to the behavior of the
+   * the @a dispatch_set.  Updates @a number_of_active_handles and
+   * @a number_of_handlers_dispatched according to the behavior of the
    * number Returns -1 if the state of the <wait_set_> has changed,
    * else 0.
    */
@@ -654,9 +654,9 @@ protected:
   /**
    * Factors the dispatching of an io handle set (each WRITE, EXCEPT
    * or READ set of handles).  It updates the
-   * <number_of_handlers_dispatched> and invokes this->notify_handle
+   * @a number_of_handlers_dispatched and invokes this->notify_handle
    * for all the handles in <dispatch_set> using the @a mask,
-   * <ready_set> and <callback> parameters.  Must return -1 if
+   * <ready_set> and @a callback parameters.  Must return -1 if
    * this->state_changed otherwise it must return 0.
    */
   virtual int dispatch_io_set (int number_of_active_handles,
@@ -666,7 +666,7 @@ protected:
                                ACE_Handle_Set& ready_mask,
                                ACE_EH_PTMF callback);
 
-  /// Notify the appropriate <callback> in the context of the @a eh
+  /// Notify the appropriate @a callback in the context of the @a eh
   /// associated with @a handle that a particular event has occurred.
   virtual void notify_handle (ACE_HANDLE handle,
                               ACE_Reactor_Mask mask,
