@@ -1,3 +1,8 @@
+Thu Aug 13 19:35:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Select_Reactor_T.h:
+          Doxygen change
+
 Thu Aug 13 19:08:43 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/SV_Semaphore_Simple.h:
